--- a/wk04_tidyr.Rmd
+++ b/wk04_tidyr.Rmd
@@ -351,11 +351,35 @@ setdiff(y, z)
 
 ### `left_join`
 
+```{r left_join, eval=F}
+songs = data.frame(
+  song = c('Across the Universe','Come Together', 'Hello, Goodbye', 'Peggy Sue'),
+  name = c('John','John','Paul','Buddy'), 
+  stringsAsFactors=F)
+artists = data.frame(
+  name = c('George','John','Paul','Ringo'),
+  plays = c('sitar','guitar','bass','drums'), 
+  stringsAsFactors=F)
+left_join(songs, artists, by='name')
+```
+
 ### `inner_join`
+
+```{r inner_join, eval=F}
+inner_join(songs, artists, by = "name")
+```
 
 ### `semi_join`
 
+```{r semi_join, eval=F}
+semi_join(songs, artists, by = "name")
+```
+
 ### `anti_join`
+
+```{r anti_join, eval=F}
+anti_join(songs, artists, by = "name")
+```
 
 ### summarize per capita CO<sub>2</sub> emissions 
 
