mv join to wk05

--- a/wk04_tidyr.Rmd
+++ b/wk04_tidyr.Rmd
@@ -308,97 +308,7 @@ _**Task**. Summarize the total emissions by country  (not World or EU28) across 
 
 ## joining data
 
-### `bind_cols`
-
-```{r bind_cols, eval=F}
-y = data.frame(
-  x1 = c('A','B','C'), 
-  x2 = c( 1 , 2 , 3), 
-  stringsAsFactors=F)
-z = data.frame(
-  x1 = c('B','C','D'), 
-  x2 = c( 2 , 3 , 4), 
-  stringsAsFactors=F)
-y
-z
-bind_cols(y, z)
-```
-
-### `bind_rows`
-
-```{r bind_rows, eval=F}
-y
-z
-bind_rows(y, z)
-```
-
-### `union`
-
-```{r union, eval=F}
-y
-z
-union(y, z)
-```
-
-### `intersect`
-
-```{r intersect, eval=F}
-y
-z
-intersect(y, z)
-```
-
-### `setdiff`
-
-```{r setdiff, eval=F}
-y
-z
-setdiff(y, z)
-```
-
-### `left_join`
-
-```{r left_join, eval=F}
-songs = data.frame(
-  song = c('Across the Universe','Come Together', 'Hello, Goodbye', 'Peggy Sue'),
-  name = c('John','John','Paul','Buddy'), 
-  stringsAsFactors=F)
-artists = data.frame(
-  name = c('George','John','Paul','Ringo'),
-  plays = c('sitar','guitar','bass','drums'), 
-  stringsAsFactors=F)
-left_join(songs, artists, by='name')
-```
-
-### `inner_join`
-
-```{r inner_join, eval=F}
-inner_join(songs, artists, by = "name")
-```
-
-### `semi_join`
-
-```{r semi_join, eval=F}
-semi_join(songs, artists, by = "name")
-```
-
-### `anti_join`
-
-```{r anti_join, eval=F}
-anti_join(songs, artists, by = "name")
-```
-
-### summarize per capita CO<sub>2</sub> emissions 
-
-You'll join the [gapminder](https://github.com/jennybc/gapminder) datasets to get world population per country.
-
-_**Task**. Report the top 5 emitting countries (not World or EU28) per capita using your long format table. (You may need to convert your year column from factor to numeric, eg `mutate(year = as.numeric(as.character(year)))`. As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
-
-_**Task**. Summarize the total emissions by country  (not World or EU28) per capita across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
-
-```{r gapminder, eval=F}
-library(gapminder) # install.packages('gapminder')
-```
+Next week, we'll do a bit on joining data.
 
 ## References
 
