added gotchas with knitting `eval=T`, pull to get img/*.png

--- a/wk04_tidyr.Rmd
+++ b/wk04_tidyr.Rmd
@@ -53,6 +53,12 @@ The first path uses this folder `.` since that `data` folder is a "child" of the
 
 For the data wrangling portion of today, append the header `## 4. Tidying up Data` to your `env-info/students/<user>.Rmd` and include R chunks to run the demo below and answer questions. You'll find it easiest to copy and paste the demo portion from [`env-info/wk04_tidyr.Rmd`](https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk04_tidyr.Rmd) but will need to understand this material enough to apply the functions to the CO<sub>2</sub> dataset as R chunks and answer all the questions.
 
+A couple of notes about copying these R chunks:
+
+- You will want to change the R chunk option from evaluate = FALSE `{r, eval=F}` to evaluate = TRUE `{r, eval=T}`. This is especially the case for `read co2` R chunk which reads in the `co2` data frame, since you will create additional R chunks which expect this object to already exist.
+
+- You will want to first synchronize with `ucsb-bren/env-info` (ie _pull request_ `ucsb-bren/env-info` to `<user>/env-info`, _merge_ the pull request in `<user>/env-info`, and _pull_ to update your local machine), in order to successfully knit your `env-info/students/<user>.Rmd`, which may expect  `env-info/wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png` and `env-info/data/co2_europa.xls`.
+
 ## data
 
 ### EDAWR
