--- a/students/jkidson.Rmd
+++ b/students/jkidson.Rmd
@@ -397,13 +397,15 @@ See sections in the [data-wrangling-cheatsheet.pdf](./refs/cheatsheets/data-wran
 
 ### summarize CO<sub>2</sub> emissions
 
-_**Task**. Report the top 5 emitting countries (not World or EU28) for 2014 using your long format table. (You may need to convert your year column from factor to numeric, eg `mutate(year = as.numeric(as.character(year)))`. As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
+ 
 
-_**Task**. Summarize the total emissions by country  (not World or EU28) across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_. 
+ 
 
 ## Assignment 4
-```{r Assignment 4}
-# Task 1
+
+Task 1
+_**Task**. Report the top 5 emitting countries (not World or EU28) for 2014 using your long format table. (You may need to convert your year column from factor to numeric, eg `mutate(year = as.numeric(as.character(year)))`. As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_.
+```{r Assignment 4 Task 1}
   names(co2) = c('country', 1970:2014) # get rid of extra decimal places in column names
   library(dplyr)
   library(tidyr)
@@ -414,9 +416,12 @@ _**Task**. Summarize the total emissions by country  (not World or EU28) across 
     subset(country != c("World","EU28")) %>%
     arrange(desc(n)) %>% 
     head(n=5)
-  
-# Task 2
-  
+```
+
+Task 2
+_**Task**. Summarize the total emissions by country  (not World or EU28) across years from your long format table and return the top 5 emitting countries. (As with most analyses, there are multiple ways to do this. I used the following functions: `filter`, `arrange`, `desc`, `head`)_.
+```{r, Assignment 4 Task 2}
+
 ```
 
 ## joining data
