--- a/wk04_tidyr.Rmd
+++ b/wk04_tidyr.Rmd
@@ -5,6 +5,10 @@ date: '`r format(Sys.time(), "%Y-%m-%d %H:%M")`'
 output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE, eval=FALSE)
+```
+
 ## Precursors
 
 ### Final Project
@@ -23,9 +27,9 @@ The class for week 9 on March 4th conflicts with the [Bren Group Project](http:/
 
 ### `setwd()`
 
-As mentioned in [wk03_dplyr](./wk03_dplyr.html#where-am-i?-getting-around-in-the-command-line), the working directory when knitting your Rmarkdown file is always the folder in which it is contained, eg for `env-info/students/bbest.Rmd` the working directory is `env-info/students`. This may be different from your R Console in RStudio which defaults to the working directory to the top level folder of your project, ie `env-info`. To get the two to be the same as you test code in the Console before knitting the Rmarkdown to HTML, I **REQUIRE** you to insert the following R chunk near the beginning (but after the Rmarkdown front matter surrounded by the rows `---`) at the top of your `env-info/students/<user>.Rmd`:
+As mentioned in [wk03_dplyr](./wk03_dplyr.html#where-am-i?-getting-around-in-the-command-line), the working directory when knitting your Rmarkdown file is always the folder in which it is contained, eg for `env-info/students/bbest.Rmd` the working directory is `env-info/students`. This may be different from your R Console in RStudio which defaults to the working directory to the top level folder of your project, ie `env-info`. To get the two to be the same as you test code in the Console before knitting the Rmarkdown to HTML, I **REQUIRE** you to insert the following R chunk near the beginning (but after the Rmarkdown front matter surrounded by the rows `---`) of your `env-info/students/<user>.Rmd`:
 
-```{r setwd students, eval=F, echo=T}
+```{r setwd students}
 # set working directory if has students directory and at R Console (vs knitting)
 if ('students' %in% list.files() & interactive()){
     setwd('students' )
@@ -39,7 +43,7 @@ if (basename(getwd()) != 'students'){
 
 This then ensures that "relative" paths will work the same in your R Console as when knitting your Rmarkdown to HTML. For instance:
 
-```{r, eval=FALSE}
+```{r}
 # absolute: /Users/bbest/github/env-info/students/data/bbest_ports-bc.csv
 d = read.csv('./data/bbest_ports-bc.csv')     # ./data is child of students
 
@@ -47,23 +51,23 @@ d = read.csv('./data/bbest_ports-bc.csv')     # ./data is child of students
 d = read.csv('../data/r-ecology/surveys.csv') # ../data is sibling of students
 ```
 
-The first path uses this folder `.` since that `data` folder is a "child" of the `students` folder, whereas the second path backs up a folder `..` before descending into the `data` folder that is a "sibling" of the `students` folder.
+The first path uses this folder `.` since that `data` folder is a "child" of the `students` folder, whereas the second path backs up a folder `..` before descending into the other `data` folder that is a "sibling" of the `students` folder.
 
 ### Assignment (Individual)
 
-For the data wrangling portion of today, append the header `## 4. Tidying up Data` to your `env-info/students/<user>.Rmd` and include R chunks to run the demo below and answer questions. You'll find it easiest to copy and paste the demo portion from [`env-info/wk04_tidyr.Rmd`](https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk04_tidyr.Rmd) but will need to understand this material enough to apply the functions to the CO<sub>2</sub> dataset as R chunks and answer all the questions.
+For the data wrangling portion of today, append the header `## 4. Tidying up Data` to your `env-info/students/<user>.Rmd` and include R chunks to run the demo below and give yourself the opportunity to try out possibilities with the code. Please set aside another header below this section `## 4. Answers and Tasks` where you answer questions and perform tasks on applying the functions to the CO<sub>2</sub> dataset as R chunks. Please include the question or task above the R chunk or answer.
 
-A couple of notes about copying these R chunks:
+You'll find it easiest to copy and paste the demo portion from [`env-info/wk04_tidyr.Rmd`](https://raw.githubusercontent.com/ucsb-bren/env-info/gh-pages/wk04_tidyr.Rmd) but will need to understand this material enough to apply to the questions and tasks.
 
-- You will want to change the R chunk option from evaluate = FALSE `{r, eval=F}` to evaluate = TRUE `{r, eval=T}`. This is especially the case for `read co2` R chunk which reads in the `co2` data frame, since you will create additional R chunks which expect this object to already exist.
-
-- You will want to synchronize with `ucsb-bren/env-info` (ie _pull request_ `ucsb-bren/env-info` to `<user>/env-info`, _merge_ the pull request in `<user>/env-info`, and _pull_ to update your local machine), in order to successfully knit your `env-info/students/<user>.Rmd`, which may expect  `env-info/wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png` and `env-info/data/co2_europa.xls`.
+You will want to synchronize with `ucsb-bren/env-info` (ie _pull request_ `ucsb-bren/env-info` to `<user>/env-info`, _merge_ the pull request in `<user>/env-info`, and _pull_ to update your local machine), in order to successfully knit your `env-info/students/<user>.Rmd`. The Rmarkdown below expects  `env-info/wk04_tidyr/img/data-wrangling-cheatsheet_tidyr.png` and `env-info/data/co2_europa.xls` which are in the updated `ucsb-bren/env-info`.
 
 ## data
 
+The R chunks explaining the `dplyr` and `tidyr` functions below are pulled from the excellent [**wrangling-webinar.pdf**](wk03_dplyr/wrangling-webinar.pdf) presentation, which you should consult as you execute (see shortcuts in [rstudio-IDE-cheatsheet.pdf](refs/cheatsheets/rstudio-IDE-cheatsheet.pdf)). 
+
 ### EDAWR
 
-```{r EDAWR, eval=F}
+```{r EDAWR}
 # install.packages("devtools")
 # devtools::install_github("rstudio/EDAWR")
 library(EDAWR)
@@ -79,7 +83,7 @@ View(pollution)
 
 ### slicing
 
-```{r traditional R slicing, eval=F}
+```{r traditional R slicing}
 # storms
 storms$storm
 storms$wind
@@ -100,7 +104,7 @@ pollution$amount[c(2,4,6)]
 storms$pressure / storms$wind
 ```
 
-```{r dplyr on storms, eval=F}
+```{r dplyr on storms}
 # better yet
 library(dplyr)
 
@@ -115,7 +119,7 @@ pollution %>%
 
 Two main functions: gather() and spread() 
 
-```{r tidyr, eval=F}
+```{r tidyr}
 # install.packages("tidyr")
 library(tidyr)
 ?gather # gather to long
@@ -124,14 +128,14 @@ library(tidyr)
 
 ### `gather`
 
-```{r gather, eval=F}
+```{r gather}
 cases
 gather(cases, "year", "n", 2:4)
 ```
 
 ### `spread`
 
-```{r spread, eval=F}
+```{r spread}
 pollution
 spread(pollution, size, amount)
 ```
@@ -140,14 +144,14 @@ Other functions to extract and combine columns...
 
 ### `separate`
 
-```{r separate, eval=F}
+```{r separate}
 storms
 storms2 = separate(storms, date, c("year", "month", "day"), sep = "-")
 ```
 
 ### `unite`
 
-```{r unite, eval=F}
+```{r unite}
 storms2
 unite(storms2, "date", year, month, day, sep = "-")
 ```
@@ -168,7 +172,7 @@ From the [data-wrangling-cheatsheet.pdf](./refs/cheatsheets/data-wrangling-cheat
 
 _**Task**. Convert the following table [CO<sub>2</sub> emissions per country since 1970](http://edgar.jrc.ec.europa.eu/overview.php?v=CO2ts1990-2014&sort=des9) from wide to long format and output the first few rows into your Rmarkdown. I recommend consulting `?gather` and you should have 3 columns in your output._
 
-```{r read co2, eval=F}
+```{r read co2}
 library(dplyr)
 library(readxl) # install.packages('readxl')
 
@@ -186,7 +190,7 @@ _**Question**. Why use `skip=12` argument in `read_excel()`?_
 
 A package that helps transform tabular data
 
-```{r dplyr, eval=F}
+```{r dplyr}
 # install.packages("dplyr")
 library(dplyr)
 ?select
@@ -207,7 +211,7 @@ See sections in the [data-wrangling-cheatsheet.pdf](./refs/cheatsheets/data-wran
 
 ### `select`
 
-```{r select, eval=F}
+```{r select}
 storms
 select(storms, storm, pressure)
 storms %>% select(storm, pressure)
@@ -215,7 +219,7 @@ storms %>% select(storm, pressure)
 
 ### `filter`
 
-```{r filter, eval=F}
+```{r filter}
 storms
 filter(storms, wind >= 50)
 storms %>% filter(wind >= 50)
@@ -227,7 +231,7 @@ storms %>%
 
 ### `mutate`
 
-```{r mutate, eval=F}
+```{r mutate}
 storms %>%
   mutate(ratio = pressure / wind) %>%
   select(storm, ratio)
@@ -235,14 +239,14 @@ storms %>%
 
 ### `group_by`
 
-```{r group_by, eval=F}
+```{r group_by}
 pollution
 pollution %>% group_by(city)
 ```
 
 ### `summarise`
 
-```{r summarise, eval=F}
+```{r summarise}
 # by city
 pollution %>% 
   group_by(city) %>%
@@ -264,7 +268,7 @@ note that `summarize` synonymously works
 
 ### `ungroup`
 
-```{r ungroup, eval=F}
+```{r ungroup}
 pollution %>% 
   group_by(size)
 
@@ -275,7 +279,7 @@ pollution %>%
 
 ### multiple groups
 
-```{r multiple groups, eval=F}
+```{r multiple groups}
 tb %>%
   group_by(country, year) %>%
   summarise(cases = sum(cases))
