--- a/students/jkidson.Rmd
+++ b/students/jkidson.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Markdown Assignment, Week 2"
+title: "R Markdown Assignment, Week 2-4"
 author: "Jennifer Kidson"
 date: "January 15, 2016"
 output:
